# docs

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
core/: index.html
core/arguments/: index.html
core/statements/: index.html
core/themes/: index.html
core/utilities/: index.html
distribution/: index.html
distribution/apple/: index.html
distribution/fixed_zipfile/: index.html
distribution/itch/: index.html
distribution/plist/: index.html
distribution/util/: index.html
docs/: index.md
docs/core/: arguments.md  build.md  index.md
docs/distribution/: apple.md  fixed_zipfile.md  index.md  itch.md  plist.md  util.md
docs/fira/: gameplay.md  implementation.md  index.md  levels.md
docs/fira/api/: grid.md  index.md  info.md  player.md  vm.md  world.md
docs/fira/core/: config.md  data.md  grid.md  index.md  template.md  vm.md
docs/scripts/: highlight.js
docs/simplechanges/: index.md  package.md  syntax.md
docs/stylesheets/: uvn.css
fira/: index.html
fira/api/: index.html
fira/api/grid/: index.html
fira/api/info/: index.html
fira/api/player/: index.html
fira/api/vm/: index.html
fira/api/world/: index.html
fira/core/: index.html
fira/core/config/: index.html
fira/core/data/: index.html
fira/core/grid/: index.html
fira/gameplay/: index.html
fira/implementation/: index.html
fira/levels/: index.html
search/: search_index.json
simplechanges/: index.html
simplechanges/package/: index.html
simplechanges/syntax/: index.html
stylesheets/: ayu.css
(+2 files in other folders)
