[tool.poetry]
name = "undocumented"
version = "2.0.0"
description = "The documentation center for Unscripted"
authors = ["Marquis Kurt <software@marquiskurt.net>"]

[tool.poetry.dependencies]
python = ">=3.7"
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
